--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 plugins {
+    id 'application'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.61'
 }
 
 version '0.0.0-SNAPSHOT'
+
+application {
+    mainClassName 'io.github.cat_in_136.jadice.JaDice'
+}
 
 repositories {
     mavenCentral()
