introduce clipboard watcher

--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -14,3 +14,4 @@ preference.dictionaries.error.already=%1 already added
 preference.dictionaries.error.io=Failed to open %s
 preference.file_chooser.filter.pdic=PDIC File (*.dic)
 always_on_top=Always on Top
+watch_clip_board=Watch clip board
