refactor and use JMenuBar instead of hamburger button

--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -1,7 +1,16 @@
 result.welcome=<h1>jaDice</h1><p>jaDice is the viewer for dictionaries of PDIC format.</p>
 result.more=More...
 result.reference=from %s
-preference=Setting
+menu.view=View
+menu.view.mnemonic=V
+menu.always_on_top=Always on Top
+menu.always_on_top.mnemonic=T
+menu.option=Option
+menu.option.mnemonic=O
+menu.preference=Setting...
+menu.preference.mnemonic=S
+menu.watch_clip_board=Watch clip board
+menu.watch_clip_board.mnemonic=W
 preference.search=Search
 preference.search.delayForTime=Delay time for incremental search
 preference.search.normalizeSearch=Normalize search word
@@ -13,5 +22,3 @@ preference.dictionaries.down=Down
 preference.dictionaries.error.already=%1 already added
 preference.dictionaries.error.io=Failed to open %s
 preference.file_chooser.filter.pdic=PDIC File (*.dic)
-always_on_top=Always on Top
-watch_clip_board=Watch clip board
