--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -1,3 +1,4 @@
+jadice=JaDice
 result.welcome=<h1>jaDice</h1><p>jaDice is the viewer for dictionaries of PDIC format.</p>
 result.more=More...
 result.reference=from %s
@@ -15,7 +16,7 @@ preference.search=Search
 preference.search.delayForTime=Delay time for incremental search
 preference.search.normalizeSearch=Normalize search word
 preference.dictionaries=Dictionaries
-preference.dictionaries.add=Add
+preference.dictionaries.add=Add...
 preference.dictionaries.delete=Delete
 preference.dictionaries.up=Up
 preference.dictionaries.down=Down
