add mnemonic for each elements on the preference panel

--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -13,13 +13,21 @@ menu.preference.mnemonic=S
 menu.watch_clip_board=Watch clip board
 menu.watch_clip_board.mnemonic=W
 preference.search=Search
+preference.search.mnemonic=S
 preference.search.delayForTime=Delay time for incremental search
+preference.search.delayForTime.mnemonic=T
 preference.search.normalizeSearch=Normalize search word
+preference.search.normalizeSearch.mnemonic=N
 preference.dictionaries=Dictionaries
+preference.dictionaries.mnemonic=D
 preference.dictionaries.add=Add...
+preference.dictionaries.add.mnemonic=A
 preference.dictionaries.delete=Delete
+preference.dictionaries.delete.mnemonic=E
 preference.dictionaries.up=Up
+preference.dictionaries.up.mnemonic=U
 preference.dictionaries.down=Down
+preference.dictionaries.down.mnemonic=W
 preference.dictionaries.error.already=%1 already added
 preference.dictionaries.error.io=Failed to open %s
 preference.file_chooser.filter.pdic=PDIC File (*.dic)
