make interval time for watching clipboard configurable

--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -16,6 +16,8 @@ preference.search=Search
 preference.search.mnemonic=S
 preference.search.delayForTime=Delay time for incremental search
 preference.search.delayForTime.mnemonic=T
+preference.search.intervalForWatchClipboard=Interval time for watching clipboard
+preference.search.intervalForWatchClipboard.mnemonic=W
 preference.search.normalizeSearch=Normalize search word
 preference.search.normalizeSearch.mnemonic=N
 preference.dictionaries=Dictionaries
