--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -18,6 +18,7 @@ preference.search.delayForTime=Delay time for incremental search
 preference.search.delayForTime.mnemonic=T
 preference.search.intervalForWatchClipboard=Interval time for watching clipboard
 preference.search.intervalForWatchClipboard.mnemonic=W
+preference.search.timerMilliSec=ms
 preference.search.normalizeSearch=Normalize search word
 preference.search.normalizeSearch.mnemonic=N
 preference.dictionaries=Dictionaries
