add README.md and LICENSE.txt to the distribution ZIP file

--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,10 @@ compileKotlin {
         jvmTarget = "1.8"
     }
 }
+
+applicationDistribution.from('LICENSE.txt'){
+    into('')
+}
+applicationDistribution.from('README.md'){
+    into('')
+}
