introduce the popup menu for the result view

--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -2,6 +2,10 @@ jadice=JaDice
 result.welcome=<h1>jaDice</h1><p>jaDice is the viewer for dictionaries of PDIC format.</p>
 result.more=More...
 result.reference=from %s
+result.popup.copy=Copy
+result.popup.copy.mnemonic=C
+result.popup.search=Search for selected text
+result.popup.search.mnemonic=S
 menu.view=View
 menu.view.mnemonic=V
 menu.always_on_top=Always on Top
