rename string bundle texts

--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -6,16 +6,12 @@ result.popup.copy=Copy
 result.popup.copy.mnemonic=C
 result.popup.search=Search for selected text
 result.popup.search.mnemonic=S
-menu.view=View
-menu.view.mnemonic=V
-menu.always_on_top=Always on Top
-menu.always_on_top.mnemonic=T
-menu.option=Option
-menu.option.mnemonic=O
-menu.preference=Setting...
-menu.preference.mnemonic=S
-menu.watch_clip_board=Watch clip board
-menu.watch_clip_board.mnemonic=W
+toolbar.always_on_top=Always on Top
+toolbar.always_on_top.mnemonic=T
+toolbar.preference=Setting...
+toolbar.preference.mnemonic=S
+toolbar.watch_clip_board=Watch clip board
+toolbar.watch_clip_board.mnemonic=W
 preference.search=Search
 preference.search.mnemonic=S
 preference.search.delayForTime=Delay time for incremental search
