add link to official site on startup message

--- a/src/main/resources/jadice.properties
+++ b/src/main/resources/jadice.properties
@@ -1,5 +1,5 @@
 jadice=JaDice
-result.welcome=<h1>jaDice</h1><p>jaDice is the viewer for dictionaries of PDIC format.</p>
+result.welcome=<h1>jaDice</h1><p><a href="https://github.com/cat-in-136/jaDice/">https://github.com/cat-in-136/jaDice/</a></p><p>jaDice is the viewer for dictionaries of PDIC format.</p>
 result.more=More...
 result.reference=from %s
 result.popup.copy=Copy
