upgrade gradlew to 6.4

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'com.ibm.icu', name: 'icu4j-charset', version: '65.1'
+    //testImplementation "junit:junit"
+    implementation "com.ibm.icu:icu4j-charset:67.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
